# Robotics-ROS

./: LICENSE
Homework1/: README.md
Homework1/ars_remote_controller_improved/: README.md  package.xml  setup.py
Homework1/ars_remote_controller_improved/launch/: ars_remote_controller.launch
Homework1/ars_remote_controller_improved/source/: README.md  ars_control.py  go_in_circle.sh  graphical_interface.py
Homework2/: README.md
Homework2/ars_obstacle_avoidance_reactive_student/: README.md
Homework2/ars_obstacle_avoidance_reactive_student/source/: ars_obstacle_avoidance_react.py
Homework3/: README.md
Homework3/ars_msf/launch/: ars_msf_state_estimator.launch
Homework3/ars_msf_state_estimator/: package.xml
Homework3/ars_msf_state_estimator/source/: ars_msf_state_estimator.py
Homework4/: README.md
Homework4/ars_motion_controller_pid/: package.xml  setup.py
Homework4/ars_motion_controller_pid/source/: ars_motion_controller.py  ars_motion_controller_ros.py  ars_pid.py
Homework5/: README.md
Homework5/ars_path_follower/launch/: ars_path_follower.launch
Homework5/ars_path_follower/source/: ars_path_follower.py
Homework5_/ars_path_follower/source/: ars_path_follower_ros.py
Homework6/: README.md
Homework6/ars_path_planner/source/: ars_discrete_search.py  ars_path_planner_ros.py
Homework6_/: README.md
Homework6_/ars_path_planner/source/: ars_connected_graph.py  ars_path_planner.py
robot_intelligence_student/ars_motion_controller_pid/: CMakeLists.txt  README.md
robot_intelligence_student/ars_motion_controller_pid/launch/: ars_motion_controller_pid.launch
robot_intelligence_student/ars_motion_controller_pid/source/: ars_motion_controller.py  ars_motion_controller_ros.py
robot_intelligence_student/ars_msf_state_estimator_student/: CMakeLists.txt  README.md  setup.py
robot_intelligence_student/ars_msf_state_estimator_student/source/: ars_msf_state_estimator.py  ars_msf_state_estimator_ros.py  ars_msf_state_estimator_ros_node.py
robot_intelligence_student/ars_obstacle_avoidance_reactive_student/: CMakeLists.txt  package.xml
robot_intelligence_student/ars_obstacle_avoidance_reactive_student/source/: ars_obstacle_avoidance_react.py  ars_obstacle_avoidance_react_ros.py  ars_obstacle_avoidance_react_ros_node.py
robot_intelligence_student/ars_path_follower_student/: CMakeLists.txt  README.md  package.xml  setup.py
robot_intelligence_student/ars_path_follower_student/source/: ars_path_follower_ros_node.py
robot_intelligence_student/ars_path_planner_student/launch/: ars_path_planner.launch
robot_intelligence_student/ars_path_planner_student/source/: ars_path_planner_ros_node.py
robot_intelligence_student/ars_remote_controller_test/: README.md  package.xml  setup.py
robot_intelligence_student/ars_remote_controller_test/source/: CMakeLists.txt  README.md  ars_control.py  go_in_circle.sh  graphical_interface.py  package.xml
robot_intelligence_student_/ars_msf_state_estimator_student/: LICENSE
robot_intelligence_student_/ars_obstacle_avoidance_reactive_student/: README.md  setup.py
robot_intelligence_student_/ars_path_follower_student/: .gitignore
robot_intelligence_student_/ars_path_planner_student/: CMakeLists.txt  package.xml  setup.py
robot_intelligence_student_/ars_remote_controller_student/: CMakeLists.txt
(+17 files in other folders)
