<?xml version="1.0"?>
<package format="2">
  <name>ars_obstacle_avoidance_react</name>
  <version>0.0.1</version>
  <description>The ars_obstacle_avoidance_react</description>

  <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>
  <author email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ars_lib_helpers</depend>

</package>
